# swoncord

./: .gitignore  Cargo.toml  README.md  icon.ai
assets/: icon.icns
src/: app.rs  discord.rs  error.rs  main.rs  swinsian.rs
