[package]
name = "swoncord"
version = "0.1.0"
edition = "2024"

[dependencies]
objc = "0.2.7"
cocoa = "0.24"
block = "0.1"
crossbeam = "0.8.4"
discord-rich-presence = "0.2.5"
log = "0.4.17"
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
musicbrainz_rs = {version = "0.9.1", default-features = false, features = ["blocking"] }
reqwest = { version = "0.12.15", features = ["blocking"] }